layout_html-form-#3-resolved-a-few-isses

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
           for="dateOfBirthField"
           class="formField"
         >
-        Full date of birth:
+         Full date of birth:
           <input
             type="date"
             name="dateOfBirth"
@@ -136,7 +136,8 @@
             type="radio"
             name="cats"
             id="catsField1"
-            value="lovesCats">
+            value="lovesCats"
+          >
             Yes
         </label>
 
@@ -148,7 +149,8 @@
             type="radio"
             name="cats"
             id="catsField2"
-            value="doesNotLoveCats">
+            value="doesNotLoveCats"
+          >
             No
         </label>
 
@@ -156,7 +158,7 @@
           for="favColorField"
           class="formField"
         >
-        What is your favorite color?
+         What is your favorite color?
           <input
             type="color"
             name="favColor"
@@ -171,15 +173,16 @@
         >
           What time do you go to bed?
           <input
-          type="time"
-          name="bedTime"
-          id="bedTimeFiled">
+            type="time"
+            name="bedTime"
+            id="bedTimeFiled"
+          >
         </label>
         <label
           for="favCarField"
           class="formField"
         >
-        What are your favorite brand of cars?
+         What are your favorite brand of cars?
           <select
             name="favCar"
             id="favCarField"
@@ -188,7 +191,6 @@
             <option value="bmv">BMV</option>
             <option value="audi">Audi</option>
             <option value="lada">Lada</option>
-            <option value=" " selected disabled></option>
           </select>
         </label>
 
@@ -204,7 +206,7 @@
             value="0"
             min="0"
             max="10"
-            >
+          >
         </label>
       </fieldset>
       <fieldset class="fieldset">
@@ -226,7 +228,7 @@
           for="recommendationField"
           class="formField"
         >
-        Would you recommend us?
+         Would you recommend us?
           <select
             name="recommendation"
             id="recommendationField"
@@ -242,7 +244,7 @@
           type="submit"
           id="submitButton"
         >
-        Submit
+         Submit
         </button>
       </label>
     </form>
